--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -35,6 +35,7 @@ p {
     background-color: blue;
     border-radius: 3px;
     width: 170px;
+    height: fit-content;
 
     .column-title {
       margin: 10px 0;
@@ -46,19 +47,31 @@ p {
         background-color: gray;
         margin: 8px;
         border-radius: 3px;
+        padding: 3%;
       }
     }
 
     .add-task-block {
-      margin: 15px 8px;
+      margin: 15px 10px;
       text-align: center;
 
       .task-text {
         margin-bottom: 10px;
+        width: 99%;
+        resize: none;
+        border: none;
+        border-radius: 3px;
+        padding: 4%;
+      }
+
+      .task-text:focus {
+        border: none;
+        outline: none;
       }
 
       .add-task-button {
         height: 22px;
+        width: 100%;
         border-radius: 3px;
         border: hidden;
         margin: auto;
