--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,7 +28,8 @@ p {
   .columns .task-column {
     background-color: blue;
     border-radius: 3px;
-    width: 170px; }
+    width: 170px;
+    height: fit-content; }
     .columns .task-column .column-title {
       margin: 10px 0; }
     .columns .task-column .tasks {
@@ -36,14 +37,24 @@ p {
       .columns .task-column .tasks .task {
         background-color: gray;
         margin: 8px;
-        border-radius: 3px; }
+        border-radius: 3px;
+        padding: 3%; }
     .columns .task-column .add-task-block {
-      margin: 15px 8px;
+      margin: 15px 10px;
       text-align: center; }
       .columns .task-column .add-task-block .task-text {
-        margin-bottom: 10px; }
+        margin-bottom: 10px;
+        width: 99%;
+        resize: none;
+        border: none;
+        border-radius: 3px;
+        padding: 4%; }
+      .columns .task-column .add-task-block .task-text:focus {
+        border: none;
+        outline: none; }
       .columns .task-column .add-task-block .add-task-button {
         height: 22px;
+        width: 100%;
         border-radius: 3px;
         border: hidden;
         margin: auto; }
