--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,7 +33,8 @@ p {
     background-color: blue;
     border-radius: 5px;
     width: 170px;
-    height: fit-content; }
+    height: max-content;
+    height: -moz-max-content; }
     .columns .task-column .column-title {
       margin: 10px 0; }
     .columns .task-column .tasks {
